# abitious

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  depot.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json
.cargo/: config.toml
.config/: socket-wheelhouse.json
.config/repo/: .prettierignore  lockstep.json  socket-wheelhouse.json
.github/actions/repo/setup-pnpm/: install-tool.mjs
.github/workflows/: build.yml  cargo-publish.yml  ci.yml  github-release.yml  npm-publish.yml
crates/abitious/: Cargo.toml
crates/abitious-decmpfs/: Cargo.toml
crates/abitious-decmpfs/examples/: gen_corpus.rs
crates/abitious-decmpfs/src/: inject.rs  lib.rs  selfextract.rs
crates/abitious-decmpfs/src/fscompress/: gate.rs  linux.rs  macos.rs  mod.rs  safety.rs  unsupported.rs  verify.rs  windows.rs
crates/abitious-decmpfs/tests/: interop_corpus.rs  roundtrip.rs
crates/abitious-decmpfs/tests/corpus/: vectors.txt
crates/abitious-producer/: Cargo.toml
crates/abitious-producer/src/: lib.rs  main.rs
crates/abitious-producer/tests/: cli.rs  e2e.rs  install_e2e.rs
crates/abitious-stub/: Cargo.toml  build.rs
crates/abitious-stub/src/: lib.rs
crates/abitious/src/: args.rs  build.rs  inspect.rs  json.rs  main.rs  metadata.rs  resolve.rs  triple.rs
crates/abitious/tests/: cli.rs  e2e.rs
docs/: PRESSED-DATA-FORMAT.md  pressed-data-format.md
fuzz/: .gitignore  Cargo.toml  fuzz.dict  no-unsafe-without-fuzz.sh  run.sh
fuzz/corpus/decode_pressed_data/: craft-header-zeros  craft-huge-size-claim  craft-short-header  real-section-elfish  real-section-small
fuzz/corpus/inject_pressed_data/: seed-elf  seed-macho
fuzz/corpus/read_hybrid_node/: craft-macho-magic-only  craft-plain-nonhybrid  real-pe-hybrid
fuzz/fuzz_targets/: decode_pressed_data.rs  inject_pressed_data.rs  read_hybrid_node.rs
npm/cli/: README.md  bin.cjs  index.cjs  index.d.cts  loader.cjs  package.json  targets.generated.json
npm/cli/test/: bin.test.mjs  codegen.test.mjs  loader.test.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: coverage.mts  gen-packages.mts  targets.mts
scripts/fleet/build-infra/lib/release-checksums/: consumer.mts
scripts/fleet/check/: publishable-version-is-prerelease-hint.mts
scripts/repo/: coverage.mts  gen-packages.mts  release-lib.mts  release-lib.test.mts  release.mts  targets.mts
