[package]
name = "abitious-decmpfs"
description = "The abitious pressed-data section ABI: build, parse, and locate a compressed-hybrid .node section (mirror of decmpfs's reader)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["napi", "addon", "compression", "decmpfs", "zstd"]
categories = ["compression", "development-tools"]

[dependencies]
sha2 = { workspace = true }
zstd = { workspace = true }
